Fixed Desktop Ver.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1" id="contenedorblanco">
-                    <h1>Tu versión.</h1>
+                    <h1>Tu versión</h1>
                     <!-- Comienzo TABS -->
                     <div>
                         <div class="row">
@@ -86,7 +86,7 @@
                                 <div role="tabpanel" class="tab-pane active" id="basica">
                                     <div class="container" id="floatcostado">
                                         <p><span id="txtrosa">VALOR</span><BR>
-                                        <span id="txtamarillo">GRATIS</span><BR>
+                                        <span id="txtamarillo">GRATIS</span><BR><br>
                                         <span id="txtrosa">INCLUYE</span><BR>
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Informe de personalidad</span><br>
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Informe de intereses</span><br>
@@ -103,7 +103,7 @@
                                     <div class="container" id="floatcostado">
                                         <p><span id="txtrosa">VALOR</span><BR>
                                         <span id="txtamarillo">$399</span><BR>
-                                        <span id="txtrosa">INCLUYE</span><BR>
+                                        <br><span id="txtrosa">INCLUYE</span><BR>
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Informe de personalidad</span><br>
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Informe de intereses</span><br>
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Informe de habilidades</span><br>
@@ -161,7 +161,7 @@
                                  <div role="tabpanel" class="tab-pane" id="premium">
                                     <div class="container" id="floatcostado">
                                         <p><span id="txtrosa">VALOR</span><BR>
-                                        <span id="txtamarillo">$690</span><BR>
+                                        <span id="txtamarillo">$690</span><BR><br>
                                         <span id="txtrosa">INCLUYE</span><BR>
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Informe de personalidad</span><br>
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Informe de intereses</span><br>
@@ -238,21 +238,6 @@
             <div id="espaciofooter1">
             <img src="svgs/viaedu-footer.svg" id="footerviaedu">
             </div>
-            <ul class="lista">
-                <li>
-                    <a href="#" id="footerlinks">SOBRE NOSOTROS</a>
-                </li>
-                <li>
-                    <a href="#" id="footerlinks">PREGUNTAS FRECUENTES</a>
-                </li>
-                <li>
-                    <a href="#" id="footerlinks">CONTACTANOS</a>
-                </li>
-            </ul>
-            <div id="espaciofooter2">
-            <a href="#"><img src="svgs/twitter-viaedu.svg" id="twviaedu"></a><a href="#"><img src="svgs/facebook-viaedu.svg" id="fbviaedu"></a>
-            </div>
-        </div>
     </footer>
 
     <!-- jQuery -->
