--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <a href="#"><img src="svgs/logo-viaedu.svg" id="logoviaedusvg" class="invisibleres"></a>
         <div id="auxnav">
             <ul class="nav navbar-nav" id="espacionav">
-                <li>
+                <li class="primnav">
                     <a href="#" id="formatolinksnav">PADRES</a>
                 </li>
-                <li>
+                <li class="secnav">
                      <a href="#" id="formatolinksnav">COLEGIOS</a>
                 </li>
             </ul>
@@ -71,7 +71,7 @@
                     <div>
                         <div class="row">
                             <div>
-
+                              <div class="auxtabs">
                               <!-- Nav tabs -->
                               <ul class="nav nav-tabs navcssfix" role="tablist">
                                 <li role="presentation" class="active"><a href="#basica" aria-controls="basica" role="tab" data-toggle="tab"><span id="formatotab">BÁSICA</span></a></li>
@@ -80,7 +80,7 @@
                                 <li id="linea">|</li>
                                 <li role="presentation"><a href="#premium" aria-controls="premium" role="tab" data-toggle="tab"><span id="formatotab">PREMIUM</span></a></li>
                               </ul>
-
+                              </div>
                               <!-- Tab panes -->
                               <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="basica">
@@ -168,8 +168,8 @@
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Informe de habilidades</span><br>
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Recomendación de Carreras & Universidades</span><br>
                                         <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> Información Complementaria de Carreras</span><br>
-                                        <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> 2 entrevistas de 45 min por Skype con<br>
-                                        <span id="auxbr">Psicopedagoga</span><br>
+                                        <span class="glyphicon glyphicon-ok" id="ticksrosas"></span><span id="txtvioletaS"> 2 entrevistas de 45 min por Skype con <br class="invisibleres">
+                                        <span class="invisibleres" id="auxbr">Psicopedagoga</span><span class="visibleres">Psicopedagoga</span><br>
                                         </p>
                                     </div>
                                     <div id="cleaner"></div>
