--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                         </p>
                                     </div>
                                     <div id="pcostado">
-                                        <p id="pcostado2"><br>Este es el punto de partida, te va a ayudar para autoconocerte; si querés además saber qué carreras e instituciones pueden llegar a ir con tu perfil elegí una de las otras opciones<br><br><a href="#" id="btnempezar">¡Empezar!</a></p>
+                                        <p id="pcostado2"><br>Este es el punto de partida, te va a ayudar para autoconocerte; si querés además saber qué carreras e instituciones pueden llegar a ir con tu perfil elegí una de las otras opciones.<br><br><a href="#" id="btnempezar">¡Empezar!</a></p>
                                     </div>
                                 </div>
                                 <div id="cleaner"></div>
