--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
                                         </p>
                                     </div>
                                     <div id="cleaner"></div>
-
+                                    <div id="auxelegi">
+                                        <h3 id="elegi">Elegí cómo querés pagar</h3>
+                                    </div>
                                     <div id="pills">
                                             <div class="accordion">
                                                 <h4 class="accordion-toggle">Lo pagan mis papás</h4>
@@ -172,7 +174,9 @@
                                         </p>
                                     </div>
                                     <div id="cleaner"></div>
-
+                                        <div id="auxelegi">
+                                            <h3 id="elegi">Elegí cómo querés pagar</h3>
+                                        </div>
                                         <div id="pills">
                                             <div class="accordion">
                                                 <h4 class="accordion-toggle">Lo pagan mis papás</h4>
@@ -216,6 +220,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                 <div id="cleaner"></div>
                                 
                               </div>
