--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                                         <div id="auxelegi">
                                             <h3 id="elegi">Elegí cómo querés pagar</h3>
                                         </div>
+                                        <div id="cleaner"></div>
                                         <div id="pills">
                                             <div class="accordion">
                                                 <h4 class="accordion-toggle">Lo pagan mis papás</h4>
